force-app/main/default/objects/Progress_Report__c/Progress_Report__c.object-meta.xml
<CustomObject>
    <label>Progress Report</label>
    <nameField>
        <label>Progress Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progress Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>