force-app/main/default/objects/Progress_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>This field is to create a relationship between the account so accounts can submit progress reports and have them linked to their accounts</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Progress Reports</relationshipLabel>
    <relationshipName>Progress_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>