force-app/main/default/objects/Progress_Report__c/fields/Cost_Budget_Information__c.field-meta.xml
<CustomField>
    <fullName>Cost_Budget_Information__c</fullName>
    <label>Cost/Budget Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>