force-app/main/default/objects/Progress_Report__c/fields/Progress_Summary__c.field-meta.xml
<CustomField>
    <fullName>Progress_Summary__c</fullName>
    <label>Progress Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>