force-app/main/default/objects/Progress_Report__c/fields/Project_Objective__c.field-meta.xml
<CustomField>
    <fullName>Project_Objective__c</fullName>
    <label>Project Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>