force-app/main/default/objects/Progress_Report__c/fields/Risks_and_Issues__c.field-meta.xml
<CustomField>
    <fullName>Risks_and_Issues__c</fullName>
    <label>Risks and Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>